# neural_operator_vr

./: .gitignore  PAPER_OUTLINE.md  PPT_OUTLINE.md  PROJECT_COMPLETE_SUMMARY.md  PROJECT_COMPLETION.md  QUICK_START.md  README.md  cleanup_and_organize.py  cleanup_repository.py  generate_complete_plot_suite.py  generate_convergence_plots.py  generate_docs.py  generate_publication_results.py  monitor_experiments.py  pyproject.toml  run_burgers_experiments.py  run_experiment_suite.py  run_fast_confirmation.py  run_largescale_experiments.py  run_test_suite.py  validate_reproducibility.py
FINAL_PUBLICATION/: COMPLETE_PACKAGE_SUMMARY.md  QUICK_REFERENCE.md  README.md
analysis/: __init__.py  baseline.py  metrics.py  spectral.py  statistics.py
comprehensive_analysis/: comprehensive_results.csv  comprehensive_results.tex  comprehensive_results.txt
datasets/: __init__.py  base.py  burgers_equation.py  data_manager.py  logistic_map.py  lorenz_system.py
docs/: index.html
examples/: config_deeponet_logistic_adam.yaml  config_deeponet_logistic_sgd.yaml  config_deeponet_logistic_svrg.yaml  config_deeponet_lorenz_svrg.yaml  config_fast_deeponet_lorenz_adam.yaml  config_fast_deeponet_lorenz_sgd.yaml  config_fast_deeponet_lorenz_svrg.yaml  config_final_fno_burgers_adam.yaml  config_final_fno_burgers_sgd.yaml  config_final_fno_burgers_svrg.yaml  config_fno_burgers_adam.yaml  config_fno_burgers_sgd.yaml  config_fno_burgers_svrg.yaml  config_largescale_deeponet_logistic_adam.yaml  config_largescale_deeponet_logistic_sgd.yaml  config_largescale_deeponet_logistic_svrg.yaml  config_largescale_deeponet_logistic_svrg_fast.yaml  config_largescale_deeponet_logistic_svrg_optimized.yaml  config_largescale_fno_burgers_adam.yaml  config_largescale_fno_burgers_sgd.yaml  config_largescale_fno_burgers_svrg.yaml  config_test_deeponet_logistic_adam.yaml  config_test_deeponet_logistic_sgd.yaml  (+7 more)
(+220 files in other folders)
